# smartedu_downloader_cli

./: Cargo.toml  Cross.toml  README.md
.cargo/: config.toml
.github/workflows/: release.yml
src/: ACCESS_TOKEN_GUIDE.txt  main.rs
