[package]
name = "smartedu_downloader_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indicatif = "0.17"
md5 = "0.7"
regex = "1"
futures = "0.3"
log = "0.4"
env_logger = "0.10"
thiserror = "1"
once_cell = "1"
chrono = "0.4"
colored = "2"

[[bin]]
name = "smartedu_downloader"
path = "src/main.rs"